--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,5 +1,5 @@
 node {
-    stage("chaeckout"){
+    stage("checkout"){
         git "https://github.com/CHALASS770/work-with-jenkins.git"
     }
     stage("run 1.py"){
