--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,12 +2,12 @@ pipeline {
     agent any
     stages {
     stage("checkout"){
-        step{
+        steps{
             git "https://github.com/CHALASS770/work-with-jenkins.git"
     }
     }
     stage("run 1.py"){
-        step{
+        steps{
             sh "python3.7 1.py"
     }
     }
